// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CreateJoinRoomScreen Create room 1`] = `
<div
  className="createJoinRoom"
>
  <div
    className="createJoinRoom__app-name type--small-white-bold"
  >
    Crowdplay V2
  </div>
  <form
    className="createJoinRoom__content"
    onSubmit={[Function]}
  >
    <svg
      fill="none"
      height="100"
      viewBox="0 0 49 49"
      width="100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0.125 38.7187V48.875H10.2812L40.2354 18.9208L30.0792 8.76458L0.125 38.7187ZM48.0896 11.0667C49.1458 10.0104 49.1458 8.30417 48.0896 7.24792L41.7521 0.910416C40.6958 -0.145834 38.9896 -0.145834 37.9333 0.910416L32.9771 5.86667L43.1333 16.0229L48.0896 11.0667Z"
        fill="white"
      />
    </svg>
    <div
      className="createJoinRoom__content__input-field"
    >
      <input
        onChange={[Function]}
        placeholder="Create room name"
        type="text"
        value=""
      />
    </div>
    <button
      className="createJoinRoom__content__button btn type--large-white"
      disabled={true}
    >
      Create
      <span
        className="type--large-green"
      >
        .
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots CreateJoinRoomScreen Join room 1`] = `
<div
  className="createJoinRoom"
>
  <div
    className="createJoinRoom__app-name type--small-white-bold"
  >
    Crowdplay V2
  </div>
  <form
    className="createJoinRoom__content"
    onSubmit={[Function]}
  >
    <svg
      fill="none"
      height="100"
      viewBox="0 0 45 45"
      width="100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.75 28H29.775L29.075 27.325C31.525 24.475 33 20.775 33 16.75C33 7.775 25.725 0.5 16.75 0.5C7.775 0.5 0.5 7.775 0.5 16.75C0.5 25.725 7.775 33 16.75 33C20.775 33 24.475 31.525 27.325 29.075L28 29.775V31.75L40.5 44.225L44.225 40.5L31.75 28ZM16.75 28C10.525 28 5.5 22.975 5.5 16.75C5.5 10.525 10.525 5.5 16.75 5.5C22.975 5.5 28 10.525 28 16.75C28 22.975 22.975 28 16.75 28Z"
        fill="white"
      />
    </svg>
    <div
      className="createJoinRoom__content__input-field"
    >
      <input
        onChange={[Function]}
        placeholder="Enter room name"
        type="text"
        value=""
      />
    </div>
    <button
      className="createJoinRoom__content__button btn type--large-white"
      disabled={true}
    >
      Join
      <span
        className="type--large-green"
      >
        .
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots HomeScreen Default 1`] = `
<div
  className="home-screen"
>
  <div>
    <div
      className="type--large-white"
    >
      CrowdSource
    </div>
    <div
      className="type--large-white"
    >
      Democratize your playlist
    </div>
  </div>
  <div
    className="home-screen__boxes-container"
  >
    <a
      className="btn home-screen__box-input"
      href="/create"
      onClick={[Function]}
    >
      <svg
        fill="none"
        height="49"
        viewBox="0 0 49 49"
        width="49"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.125 38.7187V48.875H10.2812L40.2354 18.9208L30.0792 8.76458L0.125 38.7187ZM48.0896 11.0667C49.1458 10.0104 49.1458 8.30417 48.0896 7.24792L41.7521 0.910416C40.6958 -0.145834 38.9896 -0.145834 37.9333 0.910416L32.9771 5.86667L43.1333 16.0229L48.0896 11.0667Z"
          fill="white"
        />
      </svg>
      <div
        className="type--large-white"
      >
        Create
        <span
          className="type--large-green"
        >
          .
        </span>
      </div>
    </a>
    <a
      className="btn home-screen__box-input"
      href="/join"
      onClick={[Function]}
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.75 28H29.775L29.075 27.325C31.525 24.475 33 20.775 33 16.75C33 7.775 25.725 0.5 16.75 0.5C7.775 0.5 0.5 7.775 0.5 16.75C0.5 25.725 7.775 33 16.75 33C20.775 33 24.475 31.525 27.325 29.075L28 29.775V31.75L40.5 44.225L44.225 40.5L31.75 28ZM16.75 28C10.525 28 5.5 22.975 5.5 16.75C5.5 10.525 10.525 5.5 16.75 5.5C22.975 5.5 28 10.525 28 16.75C28 22.975 22.975 28 16.75 28Z"
          fill="white"
        />
      </svg>
      <div
        className="type--large-white"
      >
        Join
        <span
          className="type--large-green"
        >
          .
        </span>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots Shared Music Tile 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#333",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
      "width": "100vw",
    }
  }
>
  <div>
    <div
      className="music-tile__container"
      style={
        Object {
          "backgroundImage": "linear-gradient(
        rgba(0, 0, 0, 0.4),
        rgba(0, 0, 0, 0.4)
      ), url(https://i.scdn.co/image/1fda702d2f421f67ac8f40cf3e8e96ce1c3b70e1)",
        }
      }
    >
      <button
        className="cbutton cbutton--effect-ivana "
        onClick={[Function]}
      >
        <svg
          className="voteButton voteButton--unactive"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <h2>
        2
      </h2>
      <h3
        className="music-tile__song-title"
      >
        Sleep On The Floor
      </h3>
      <h5>
        3:31
      </h5>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Vote Button 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#333",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="cbutton cbutton--effect-ivana "
        onClick={[Function]}
      >
        <svg
          className="voteButton voteButton--unactive"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <p>
        Unactive
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "0 2rem",
          "textAlign": "center",
        }
      }
    >
      <button
        className="cbutton cbutton--effect-ivana "
        onClick={[Function]}
      >
        <svg
          className="voteButton voteButton--active"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <p>
        Active
      </p>
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="cbutton cbutton--effect-ivana "
        onClick={[Function]}
      >
        <svg
          className="voteButton voteButton--unactive"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <p>
        Interactive
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared VoteButton 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#333",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="cbutton cbutton--effect-ivana "
        onClick={[Function]}
      >
        <svg
          className="voteButton voteButton--unactive"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <p>
        Unactive
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "0 2rem",
          "textAlign": "center",
        }
      }
    >
      <button
        className="cbutton cbutton--effect-ivana "
        onClick={[Function]}
      >
        <svg
          className="voteButton voteButton--active"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <p>
        Active
      </p>
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <button
        className="cbutton cbutton--effect-ivana "
        onClick={[Function]}
      >
        <svg
          className="voteButton voteButton--unactive"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </button>
      <p>
        Interactive
      </p>
    </div>
  </div>
</div>
`;
